service and controller update