@@ -12,6 +12,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -62,7 +63,7 @@ public class CustomUserDetailsService implements UserDetailsService {
      * @return коллекция объектов {@link GrantedAuthority}, описывающих права пользователя
      */
     private Collection<? extends GrantedAuthority> toAuthorities(Role role) {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 }
 
